--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Apiki</title>
+    <!-- link css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- link js -->
     <script src="js/script.js" defer></script>
 </head>
 <body>
+    <header class="header">
+        <div class="logo"><img src="image/logo-novo.webp" alt=""></div>
+        <input type="text" placeholder="Pesquisa..." class="input__search">
+    </header>
     <main class="main">
         <section class="card">
-            <img class="card__img" id="card_img" src="" alt="card">
-            <h1 class="card__texto" id="card_texto"></h1>
-            <p class="card__paragrafo" id="card_paragrafo"></p>
+            <img class="card__image" src="" alt="card">
+            <h1 class="card__tittle"></h1>
+            <p class="card__paragrafo"></p>
         </section>
     </main>
 </body>
