--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 <body>
     <header class="header">
         <div class="logo"><img src="image/logo-novo.webp" alt="logo"></div>
+        <input
+            class="input__search"
+            type="text"
+            placeholder="Pesquisa..."
+        >
+
+        <nav>
+            <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </nav>
+
     </header>
     <main class="main">
         <section class="card">
