--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog - Apiki</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo"><img src="image/logo-novo.webp" alt="logo"></div>
-        <input
-            class="input__search"
-            type="text"
-            placeholder="Pesquisa..."
-        >
+      <div class="logo"><img src="image/logo-novo.webp" alt="logo" /></div>
+      <input class="input__search" type="text" placeholder="Pesquisa..." />
 
-        <nav>
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </nav>
-
+      <nav>
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </nav>
     </header>
     <main class="main">
-        <section class="card">
-            <div>
-                <img class="card__image" src="" alt="">
-            </div>
-            <div>
-                <h1 class="card__tittle">Titulo</h1>
-                <p class="card__paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, rem commodi. Ex consequuntur vel voluptates in, itaque iste suscipit asperiores quia quasi officiis repellendus ipsum esse eos corporis et laborum.</p>
-                <a href="" class="card__link"></a>
-            </div>
-        </section>
+      <section class="card">
+        <div>
+          <img class="card__image" src="" alt="" />
+        </div>
+        <div>
+          <h1 class="card__tittle">Titulo</h1>
+          <p class="card__paragrafo">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, rem
+            commodi. Ex consequuntur vel voluptates in, itaque iste suscipit
+            asperiores quia quasi officiis repellendus ipsum esse eos corporis
+            et laborum.
+          </p>
+          <a href="" class="card__link"></a>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
