--- a/index.html
+++ b/index.html
@@ -22,21 +22,7 @@
       </nav>
     </header>
     <main class="main">
-      <section class="card">
-        <div>
-          <img class="card__image" src="" alt="" />
-        </div>
-        <div>
-          <h1 class="card__tittle">Titulo</h1>
-          <p class="card__paragrafo">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, rem
-            commodi. Ex consequuntur vel voluptates in, itaque iste suscipit
-            asperiores quia quasi officiis repellendus ipsum esse eos corporis
-            et laborum.
-          </p>
-          <a href="" class="card__link"></a>
-        </div>
-      </section>
+      <section class="container"></section>
     </main>
   </body>
 </html>
