--- a/artigo.html
+++ b/artigo.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
     <main class="main">
-      <section class="card"></section>
+      <section class="artigo"></section>
     </main>
   </body>
 </html>
