--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     </header>
     <main class="main">
       <section class="card"></section>
+      <section class="leia">
+        <button class="btn__leia" onclick="leia()">Carregar mais...</button>
+      </section>
     </main>
   </body>
 </html>
